Fix shifting buttons

--- a/skin/skin_button_add.less
+++ b/skin/skin_button_add.less
@@ -36,7 +36,6 @@
 
 .buttonPushEffect {
     color: @textColor;
-    border: 1px solid @warning2Color;
     background: @warning2Color;
     .grindEdge;
     -webkit-transform: none;
